[gd_scene load_steps=5 format=3 uid="uid://bnbdtimsalj7d"]

[ext_resource type="Texture2D" uid="uid://feo3g6surcma" path="res://Assets/2D Assets/Icons/16.png" id="1_5ne8r"]
[ext_resource type="Script" uid="uid://b4xsjjvgrf0kn" path="res://Scenes/PCUI/discord_call.gd" id="1_qgkk8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ut3bd"]
bg_color = Color(0.2484, 0.2484, 0.2484, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qgkk8"]
texture = ExtResource("1_5ne8r")

[node name="Discord_Call" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_qgkk8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ut3bd")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -165.0
offset_right = 50.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qgkk8")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -70.0
offset_right = 58.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.76662, 0.76662, 0.76662, 1)
theme_override_font_sizes/font_size = 15
text = "Incoming call..."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Anonymous"

[node name="Accept" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 100.0
offset_right = -50.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
text = "âœ“"

[node name="Cancel" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 100.0
offset_right = 70.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
text = "x"

[node name="Label4" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 32.0
offset_top = 137.0
offset_right = 86.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0.525101, 0.525101, 0.525101, 1)
theme_override_font_sizes/font_size = 12
text = "Ignore"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -93.0
offset_top = 137.0
offset_right = -39.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0.525101, 0.525101, 0.525101, 1)
theme_override_font_sizes/font_size = 12
text = "Accept"
horizontal_alignment = 1

[connection signal="cancel_threat_call" from="." to="." method="_on_cancel_threat_call"]
[connection signal="pressed" from="Cancel" to="." method="_on_button_2_pressed"]
